Adiciona exeplo de lista de definição

--- a/index.html
+++ b/index.html
@@ -4,5 +4,38 @@
     <meta charset="UTF-8" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>DCC121: Marcos Andrade</h1>
+    <p>Nessa pagina falarei sobre meus interesses.</p>
+    <h2>Filmes</h2>
+    <p>Alguns filmes que eu gosto:</p>
+    <ul>
+      <li>Detetive Pikachu</li>
+      <li>Matrix</li>
+      <li>Senhor dos Anéis</li>
+      <li>Darkman: A vingança sem rosto</li>
+      <li>Um sonho de liberdade</li>
+    </ul>
+    <h2>Games</h2>
+    <p>Os jogos que eu mais gosto em tier list:</p>
+    <ol>
+      <li>World of Warcraft</li>
+      <li>Valorant</li>
+      <li>Overwatch</li>
+      <li>Rocket League</li>
+      <li>Elden Ring</li>
+    </ol>
+    <h3>Estilos de jogos</h3>
+    <dl>
+      <div>
+        <dt>Sobrevivencia</dt>
+        <dd>
+          São jogos focados em acompanhar um personagem em um ambiente hostil.
+        </dd>
+        <dd>Envolve usar recursos para criar ferramentas.</dd>
+        <dt>Dungeon Crawl</dt>
+        <dd>Mapas gerados procedualmente e com morte permanente.</dd>
+      </div>
+    </dl>
+  </body>
 </html>
