aula sobre listas

--- a/tabela.html
+++ b/tabela.html
@@ -1,12 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>DCC121 Tabelas</title>
+  </head>
+  <body>
     <h1>DCC121 Tabelas</h1>
+    <table>
+      <tr>
+        <thead>
+          <th>Nome</th>
+          <th>Altura</th>
+          <th>Peso</th>
+          <th>Idade</th>
+        </thead>
+      </tr>
+      <tbody>
+        <tr>
+          <td>Fulano</td>
+          <td>1,81</td>
+          <td>82</td>
+          <td>21</td>
+        </tr>
+        <tr>
+          <td>Sicrano</td>
+          <td>1,73</td>
+          <td>66</td>
+          <td>35</td>
+        </tr>
+        <tr>
+          <td>Escobar</td>
+          <td>1,81</td>
+          <td>66</td>
+          <td>27</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <th scope="row">Media:</th>
+        <td>1,69</td>
+        <td>69</td>
+        <td>27</td>
+      </tfoot>
+    </table>
+  </body>
 
-</head>
-<body>
-    
-</body>
+  <h1>Outro exemplo</h1>
+  <table>
+    <tr>
+      <td colspan="2">1</td>
+      <td>3</td>
+      <td rowspan="3">4</td>
+      <td>5</td>
+    </tr>
+    <tr>
+      <td colspan="3" rowspan="2">6</td>
+      <td>10</td>
+    </tr>
+    <tr>
+        <td>15</td>
+    </tr>
+    <tr>
+      <td>16</td>
+      <td>17</td>
+      <td>18</td>
+      <td>19</td>
+      <td>20</td>
+    </tr>
+  </table>
 </html>
